Updating Amharic translation.

--- a/po/am.po
+++ b/po/am.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 1.0\n"
 "POT-Creation-Date: 2003-01-06 06:07+0100\n"
-"PO-Revision-Date: 2003-02-03 10:16+EDT\n"
+"PO-Revision-Date: 2003-02-07 17:46+EDT\n"
 "Last-Translator: Ge'ez Frontier Foundation <locales@geez.org>\n"
 "Language-Team: Amharic <locales@geez.org>\n"
 "MIME-Version: 1.0\n"
@@ -184,7 +184,7 @@ msgstr "ኖም ... ነው"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr "ነጻ ሶፍትዌር"
+msgstr "ነፃ ሶፍትዌር"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
