Dutch translation updated by Tino Meinen.
2003-02-11  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Tino Meinen.

--- a/po/nl.po
+++ b/po/nl.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-12-14 12:22+0100\n"
+"POT-Creation-Date: 2003-02-09 12:09+0100\n"
+"PO-Revision-Date: 2003-02-09 16:29+0100\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -134,7 +134,7 @@ msgstr "Systeemadministratie"
 
 #: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr "Bezig met Laden..."
+msgstr "Bezig met laden..."
 
 #: src/yelp-view-content.c:543 src/yelp-view-index.c:517
 msgid "Section"
@@ -171,7 +171,7 @@ msgstr "Documenten"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
-msgstr "Categoriën"
+msgstr "Categorieën"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
