--- a/po/be.po
+++ b/po/be.po
@@ -1,49 +1,51 @@
+# translation of yelp.HEAD.be.po to belarusian
 # translation of yelp.
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Copyright (C) 2002,2003 Free Software Foundation, Inc.
+# Vital Khilko <dojlid@mova.org>, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 3.0\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-10-27 08:31GMT+2\n"
+"Project-Id-Version: yelp.HEAD.be\n"
+"POT-Creation-Date: 2003-02-07 20:07+0100\n"
+"PO-Revision-Date: 2003-02-07 01:54GMT+2\n"
 "Last-Translator: Vital Khilko <dojlid@mova.org>\n"
 "Language-Team: belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.5\n"
+"X-Generator: KBabel 1.0\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Пошук тэкста у дакумэнце:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Аўтаматычна _пераносіць"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Пошук тэкста..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Поўнае _супадзеньне"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "_У верхнім/ніжнім рэгістрах"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Наступнае"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Папярэдняе"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -140,9 +142,8 @@ msgid "Section"
 msgstr "Параграфы"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Адшукаць:"
+msgstr "Ад_шукаць па:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -203,15 +204,15 @@ msgstr "/Файл/_Зачыніць акно"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Рэдагаваць"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Рэдагаваць/_Шукаць на старонцы..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Рэдагаваньне/Шукаць _далей"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -299,3 +300,4 @@ msgstr "Атрымаць дапамогу ў асяродьдзі GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Дапамога"
+
