--- a/po/az.po
+++ b/po/az.po
@@ -6,45 +6,44 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.01\n"
 "POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2001-12-20 18:44GMT+0200\n"
-"Last-Translator: Vasif İsmayıloğlu MD <azerb_linux@hotmail.com>\n"
-"Language-Team: Azerbaijani Turkic <linuxaz@azerimail.net>\n"
+"PO-Revision-Date: 2003-02-18 04:52+0200\n"
+"Last-Translator: Mətin Əmirov <metin@karegen.com>\n"
+"Language-Team: Azerbaijani Turkish <az@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.5\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Sənəddə mətni tap:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "_Birbaşa bük"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Mətni tap..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Bütün _sözü eşləşdir"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "Böyük/kiçik hərfləri eşləşdir"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "_Sonraki"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Öncəki"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -52,257 +51,269 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr ""
+msgstr "Yelp Emalatxanası"
 
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr ""
+msgstr "Yelp aktiv edilə bilmədi: '%s'"
 
 #: src/yelp-main.c:136
 msgid "Could not open new window."
-msgstr ""
+msgstr "Yeni pəncərə açıla bilmədi."
 
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
+#: src/yelp-man.c:296
+#: src/yelp-man.c:317
+#: src/yelp-man.c:353
+#: src/yelp-man.c:385
+#: src/yelp-man.c:401
+#: src/yelp-man.c:412
 msgid "X11"
-msgstr ""
+msgstr "X11"
 
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
+#: src/yelp-man.c:301
+#: src/yelp-man.c:332
+#: src/yelp-man.c:390
+#: src/yelp-man.c:417
 msgid "OpenSSL"
-msgstr ""
+msgstr "OpenSSL"
 
 #: src/yelp-man.c:306
 msgid "Termcap"
-msgstr ""
+msgstr "Termcap"
 
 #: src/yelp-man.c:322
 msgid "Perl"
-msgstr ""
+msgstr "Perl"
 
 #: src/yelp-man.c:327
 msgid "Qt"
-msgstr ""
+msgstr "Qt"
 
 #: src/yelp-man.c:337
 msgid "TIFF"
-msgstr ""
+msgstr "TIFF"
 
 #: src/yelp-man.c:342
 msgid "PThreads"
-msgstr ""
+msgstr "PThreads"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr ""
+msgstr "Sistem Çağırışları"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr ""
+msgstr "Kitabxana Funksiyaları"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr ""
+msgstr "Çərdək Qaydaları"
 
 #: src/yelp-man.c:429
 msgid "Applications"
-msgstr ""
+msgstr "Təminatlar"
 
 #: src/yelp-man.c:434
 msgid "Development"
-msgstr ""
+msgstr "Gəlişdirmə"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr ""
+msgstr "Avadanlıqlar"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr ""
+msgstr "Quraşdırma Faylları"
 
 #: src/yelp-man.c:449
 msgid "Games"
-msgstr ""
+msgstr "Oyunlar"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr ""
+msgstr "İcmallar"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr ""
+msgstr "Sistem Yönətimi"
 
-#: src/yelp-view-content.c:502 src/yelp-view-index.c:423
+#: src/yelp-view-content.c:502
+#: src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr ""
+msgstr "Yüklənir..."
 
-#: src/yelp-view-content.c:543 src/yelp-view-index.c:517
+#: src/yelp-view-content.c:543
+#: src/yelp-view-index.c:517
 msgid "Section"
 msgstr "Qisim"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr ""
+msgstr "_Axtar:"
 
-#. GList           *seriesids;
+#  GList           *seriesids;
 #: src/yelp-view-toc.c:165
-#, fuzzy
 msgid "Help Contents"
-msgstr "Yardım yeri "
+msgstr "Yardımın İçindəkilər"
 
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
-msgstr ""
+msgstr "GNOME - Masaüstü"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
-msgstr ""
+msgstr "Əlavə sənədlər"
 
-#: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
+#: src/yelp-view-toc.c:168
+#: src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr ""
+msgstr "Əl kitabları"
 
-#: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
+#: src/yelp-view-toc.c:169
+#: src/yelp-view-toc.c:549
 msgid "Info Pages"
-msgstr ""
+msgstr "Məlumat Səhifələri"
 
-#: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
+#: src/yelp-view-toc.c:366
+#: src/yelp-view-toc.c:550
+#: src/yelp-view-toc.c:749
 msgid "Documents"
-msgstr ""
+msgstr "Sənədlər"
 
-#: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
+#: src/yelp-view-toc.c:367
+#: src/yelp-view-toc.c:494
+#: src/yelp-view-toc.c:750
 msgid "Categories"
-msgstr ""
+msgstr "Kateqoriyalar"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
-msgstr ""
+msgstr "Əl kitabları"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
-msgstr ""
+msgstr "GNOME"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr ""
+msgstr "Sərbəst Yazılım"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
-msgstr ""
+msgstr "/_Fayl"
 
 #: src/yelp-window.c:164
 msgid "/File/_New window"
-msgstr ""
+msgstr "/Fayl/_Yeni pəncərə"
 
 #: src/yelp-window.c:165
 msgid "/File/_Close window"
-msgstr ""
+msgstr "/Fayl/Pəncərəni _qapat"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Düzəlt"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Düzəlt/_Səhifədə tap..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Düzəlt/_Yenidən tap"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
-msgstr ""
+msgstr "/_Get"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr ""
+msgstr "/Get/_Geriyə"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr ""
+msgstr "/Get/_İrəli"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr ""
+msgstr "/Get/_Ev"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr ""
+msgstr "/Get/_İndex"
 
 #: src/yelp-window.c:177
-#, fuzzy
 msgid "/_Help"
-msgstr "Yelp"
+msgstr "/_Yardım"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr ""
+msgstr "/Yardım/_Haqqında"
 
-#: src/yelp-window.c:238 src/yelp-window.c:438
-#, fuzzy
+#: src/yelp-window.c:238
+#: src/yelp-window.c:438
 msgid "Help Browser"
-msgstr "GNOME Yardımsəyyahı"
+msgstr "Yardım Səyyahı"
 
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
-msgstr ""
+msgstr "'%s' adlı sənəd yoxdur"
 
-#. Note to translators: put here your name (and address) so it
-#. * will shop up in the "about" box
+#  Note to translators: put here your name (and address) so it
+#  * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr ""
+msgstr "Tərcüməçilər:Vasif İsmailoğlu linuxaz@azerimail.net; Mətin Əmirov metin@karegen.com"
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
-msgstr ""
+msgstr "GNOME 2.0 üçün Yardım Səyyahı"
 
 #: src/yelp-window.c:788
 msgid "Back"
-msgstr ""
+msgstr "Geriyə"
 
 #: src/yelp-window.c:789
 msgid "Show previous page in history"
-msgstr ""
+msgstr "Keçmişdəki öncəki səhifəni göstər"
 
 #: src/yelp-window.c:800
 msgid "Forward"
-msgstr ""
+msgstr "İrəli"
 
 #: src/yelp-window.c:801
 msgid "Show next page in history"
-msgstr ""
+msgstr "Keçmişdəki növbəti səhifəni göstər"
 
 #: src/yelp-window.c:814
 msgid "Home"
-msgstr ""
+msgstr "Ev"
 
 #: src/yelp-window.c:815
 msgid "Go to home view"
-msgstr ""
+msgstr "Ev görünüşünə get"
 
 #: src/yelp-window.c:825
 msgid "Index"
-msgstr ""
+msgstr "İndex"
 
 #: src/yelp-window.c:826
 msgid "Search in the index"
-msgstr ""
+msgstr "İndexdə axtar"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr ""
+msgstr "GNOME haqqında yardım al"
 
 #: yelp.desktop.in.h:2
-#, fuzzy
 msgid "Help"
-msgstr "Yelp"
+msgstr "Yardım"
 
 #~ msgid ""
 #~ "<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
