--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-18  Metin Amiroff  <metin@karegen.com>
+
+	* az.po:  Updated Azeri translation.
+
 2003-02-18  Roozbeh Pournader  <roozbeh@sharif.edu>
 
 	* fa.po: Added Persian translation.
