--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-21  Paisa Seeluangsawat  <paisa@colorado.edu>
+
+	* configure.in (ALL_LINGUAS): Added "th".
+
 2003-02-18  Roozbeh Pournader  <roozbeh@sharif.edu>
 
 	* configure.in: Added "fa" to ALL_LINGUAS.
