--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-21  Paisa Seeluangsawat  <paisa@colorado.edu>
+
+        * th.po: Added Thai translation.
+
 2003-02-18  Metin Amiroff  <metin@karegen.com>
 
 	* az.po:  Updated Azeri translation.
