--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-25  Samúel Jón Gunnarsson <sammi@techattack.nu>
+
+	* is.po: Added Icelandic translation.
+
 2003-02-21  Paisa Seeluangsawat  <paisa@colorado.edu>
 
         * th.po: Added Thai translation.
