--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2003-02-25  SamÃºel JÃ³n Gunnarsson <sammi@techattack.nu>
+2003-03-08  Gil "Dolfin" Osher <dolfin@rpg.org.il>
+
+	* he.po: Updated Hebrew translation.
+
+2003-02-25  Sam?ºel J?³n Gunnarsson <sammi@techattack.nu>
 
 	* is.po: Added Icelandic translation.
 
@@ -91,7 +95,7 @@
 
 	* vi.po: Updated Vietnamese file
 
-2003-01-18  TÃƒÂµivo LeedjÃƒâ‚¬rv  <toivo@linux.ee>
+2003-01-18  T?ƒ?µivo Leedj?ƒâ‚¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -260,7 +264,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm??¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -277,7 +281,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
+	* no.po: Updated Norwegian (bokm??¯????“) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -295,10 +299,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germ?Â¯???Å“ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ??¯????“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -364,7 +368,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
+	* no.po: Updated Norwegian (bokm??¯????“) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -375,7 +379,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj??¯????“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -435,7 +439,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj??¯????“v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -443,14 +447,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germ?Â¯???Å“ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ??¯????“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell Mar?Â¯???Å“ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar??¯????“ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -501,7 +505,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
+	* no.po: Updated Norwegian (bokm??¯????“) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -533,10 +537,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germ?Â¯???Å“ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ??¯????“ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel Garc?Â¯???Å“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -555,13 +559,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo Leedj?Â¯???Å“v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj??¯????“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm?Â¯???Å“) translation.
+	* no.po: Updated Norwegian (bokm??¯????“) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -631,7 +635,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <toivo@linux.ee>
+2002-04-11  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -692,7 +696,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv <toivo@linux.ee>
+2002-03-17  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -712,10 +716,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A?Âƒ$)B??n Poo-Caama-A?Âƒ$)B?Â±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A??ƒ$)B??n Poo-Caama-A??ƒ$)B??±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-A?Âƒ$)B?Â­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A??ƒ$)B??­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -737,7 +741,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -771,7 +775,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-03-01  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -788,7 +792,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-02-28  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -819,7 +823,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-A?Âƒ$)B?Â¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A??ƒ$)B??¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -834,7 +838,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-A?Âƒ$)B?Âµivo Leedj-A?Âƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-02-17  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -852,19 +856,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-A?Âƒ$)B?Â³ Mar-A?Âƒ$)B?Â­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A??ƒ$)B??³ Mar-A??ƒ$)B??­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-A?Âƒ$)B?Â­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A??ƒ$)B??­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -886,7 +890,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -912,7 +916,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -949,7 +953,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -976,9 +980,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-A?Âƒ$)B?Â¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A??ƒ$)B??¶rkem Cetin.
 
-2002-01-06  Germ-A?Âƒ$)B??n Poo-Caama-A?Âƒ$)B?Â±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A??ƒ$)B??n Poo-Caama-A??ƒ$)B??±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -996,7 +1000,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -1012,7 +1016,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-A?Âƒ$)B?Â¥l) translation.
+	* no.po: Added Norwegian (bokm-A??ƒ$)B??¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -1051,7 +1055,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-A?Âƒ$)B?Â³ Mar-A?Âƒ$)B?Â­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A??ƒ$)B??³ Mar-A??ƒ$)B??­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
