--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-10  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "eo" to ALL_LINGUAS.
+
 2003-02-25  Samúel Jón Gunnarsson  <sammi@techattack.nu>
 
 	* configure.in: added "is" to ALL_LINGUAS
