--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-10  Christian Rose  <menthos@menthos.com>
+
+	* eo.po: Added Esperanto translation by
+	Joël Brich <joel.brich@laposte.net>.
+
 2003-03-08  Gil "Dolfin" Osher <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
