--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-13  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "ml" to ALL_LINGUAS.
+
 2003-03-10  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "eo" to ALL_LINGUAS.
