Added Hungarian translation.
2003-03-16  Andras Timar  <timar@gnome.hu>

	* l10n.xml: Added Hungarian translation.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-16  Andras Timar  <timar@gnome.hu>
+
+	* l10n.xml: Added Hungarian translation.
+
 2002-09-18  Marius Andreiana <mandreiana@yahoo.com>
 
 	* l10n.xml: added Romanian translation
