--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-17  Roozbeh Pournader  <roozbeh@sharif.edu>
+
+	* fa.po: Updated Persian translation.
+
 2003-03-13  Christian Rose  <menthos@menthos.com>
 
 	* ml.po: Added Malayalam translation by
