--- a/po/fa.po
+++ b/po/fa.po
@@ -6,57 +6,58 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2003-02-17 05:05+0100\n"
-"PO-Revision-Date: 2002-08-24 03:53+0430\n"
+"PO-Revision-Date: 2003-03-17 23:17+0330\n"
 "Last-Translator: Roozbeh Pournader <roozbeh@sharif.edu>\n"
 "Language-Team: Persian <farsi@lists.sharif.edu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>یافتن متن در نوشتار:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "پیچش خودکار"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "یافتن متن..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "تطبیق کل کلمه"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "تطبیق حروف بزرگ و کوچک"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "بعدی"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "قبلی"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr "Yelp"
+msgstr "یلپ"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "کارخانه‌ی Yelp"
+msgstr "کارخانه‌ی یلپ"
 
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "نمی‌توان Yelp را فعال کرد: '%s'"
+msgstr "نمی‌توان یلپ را فعال کرد: '%s'"
 
 #: src/yelp-main.c:136
 msgid "Could not open new window."
@@ -109,7 +110,7 @@ msgstr "برنامه‌ها"
 
 #: src/yelp-man.c:434
 msgid "Development"
-msgstr ""
+msgstr "برنامه‌سازی"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
@@ -125,7 +126,7 @@ msgstr "بازی‌ها"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr ""
+msgstr "دیدهای کلی"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
@@ -140,7 +141,6 @@ msgid "Section"
 msgstr "قسمت"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
 msgstr "جستجو برای:"
 
@@ -171,7 +171,7 @@ msgstr "نوشتارها"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
-msgstr ""
+msgstr "مقوله‌ها"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
@@ -203,15 +203,15 @@ msgstr "/پرونده/بستن پنجره"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/ویرایش"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/ویرایش/یافتن در صفحه..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/ویرایش/یافتن مجدد"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -299,3 +299,4 @@ msgstr "راهنمایی گرفتن در مورد گنوم"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "راهنما"
+
