Dutch translation updated by Vincent van Adrighem.
2003-03-30  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Vincent van Adrighem.

--- a/po/nl.po
+++ b/po/nl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2003-02-09 12:09+0100\n"
+"POT-Creation-Date: 2003-03-30 12:43+0200\n"
 "PO-Revision-Date: 2003-02-09 16:29+0100\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
@@ -215,23 +215,23 @@ msgstr "/Bewerken/_Opnieuw zoeken"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
-msgstr "/_Ga"
+msgstr "/_Ga naar"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr "/Ga/_Terug"
+msgstr "/Ga naar/V_orige"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr "/Ga/_Vooruit"
+msgstr "/Ga naar/_Volgende"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr "/Ga/_Startpagina"
+msgstr "/Ga naar/_Startpagina"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/Ga/_Index"
+msgstr "/Ga naar/_Index"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
@@ -260,11 +260,11 @@ msgstr ""
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
-msgstr "Hulp Browser voor GNOME 2.0"
+msgstr "Hulp Browser voor GNOME 2"
 
 #: src/yelp-window.c:788
 msgid "Back"
-msgstr "Terug"
+msgstr "Vorige"
 
 #: src/yelp-window.c:789
 msgid "Show previous page in history"
@@ -272,7 +272,7 @@ msgstr "De vorige pagina tonen"
 
 #: src/yelp-window.c:800
 msgid "Forward"
-msgstr "Vooruit"
+msgstr "Volgende"
 
 #: src/yelp-window.c:801
 msgid "Show next page in history"
