--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-30  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Vincent van Adrighem.
+
 2003-03-17  Roozbeh Pournader  <roozbeh@sharif.edu>
 
 	* fa.po: Updated Persian translation.
@@ -10,13 +14,13 @@
 2003-03-10  Christian Rose  <menthos@menthos.com>
 
 	* eo.po: Added Esperanto translation by
-	JoÃ«l Brich <joel.brich@laposte.net>.
+	JoÃƒÂ«l Brich <joel.brich@laposte.net>.
 
 2003-03-08  Gil "Dolfin" Osher <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
 
-2003-02-25  Sam?ºel J?³n Gunnarsson <sammi@techattack.nu>
+2003-02-25  Sam?Âºel J?Â³n Gunnarsson <sammi@techattack.nu>
 
 	* is.po: Added Icelandic translation.
 
@@ -109,7 +113,7 @@
 
 	* vi.po: Updated Vietnamese file
 
-2003-01-18  T?ƒ?µivo Leedj?ƒâ‚¬rv  <toivo@linux.ee>
+2003-01-18  T?Âƒ?Âµivo Leedj?ÂƒÃ¢Â‚Â¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -278,7 +282,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm??¥l) translation.
+	* no.po: Updated Norwegian (bokm??Â¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -295,7 +299,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm??¯????“) translation.
+	* no.po: Updated Norwegian (bokm??Â¯????Â“) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -313,10 +317,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germ??¯????“ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ??Â¯????Â“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??Â¯????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -382,7 +386,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm??¯????“) translation.
+	* no.po: Updated Norwegian (bokm??Â¯????Â“) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -393,7 +397,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo Leedj??¯????“v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj??Â¯????Â“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -453,7 +457,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo Leedj??¯????“v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj??Â¯????Â“v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -461,14 +465,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germ??¯????“ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ??Â¯????Â“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??Â¯????Â“ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell Mar??¯????“ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar??Â¯????Â“ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc??Â¯????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -519,7 +523,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm??¯????“) translation.
+	* no.po: Updated Norwegian (bokm??Â¯????Â“) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -551,10 +555,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germ??¯????“ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ??Â¯????Â“ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel Garc??¯????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc??Â¯????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -573,13 +577,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo Leedj??¯????“v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj??Â¯????Â“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm??¯????“) translation.
+	* no.po: Updated Norwegian (bokm??Â¯????Â“) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -649,7 +653,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <toivo@linux.ee>
+2002-04-11  T-A??Âƒ$)B??Âµivo Leedj-A??Âƒ$)B?Ã¢Â‚Â¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -710,7 +714,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv <toivo@linux.ee>
+2002-03-17  T-A??Âƒ$)B??Âµivo Leedj-A??Âƒ$)B?Ã¢Â‚Â¬rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -730,10 +734,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A??ƒ$)B??n Poo-Caama-A??ƒ$)B??±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A??Âƒ$)B??n Poo-Caama-A??Âƒ$)B??Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-A??ƒ$)B??­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A??Âƒ$)B??Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -755,7 +759,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -789,7 +793,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-03-01  T-A??Âƒ$)B??Âµivo Leedj-A??Âƒ$)B?Ã¢Â‚Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -806,7 +810,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-02-28  T-A??Âƒ$)B??Âµivo Leedj-A??Âƒ$)B?Ã¢Â‚Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -837,7 +841,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-A??ƒ$)B??¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A??Âƒ$)B??Â¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -852,7 +856,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-A??ƒ$)B??µivo Leedj-A??ƒ$)B?â‚¬rv  <leedjarv@interest.ee>
+2002-02-17  T-A??Âƒ$)B??Âµivo Leedj-A??Âƒ$)B?Ã¢Â‚Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -870,19 +874,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-A??ƒ$)B??³ Mar-A??ƒ$)B??­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A??Âƒ$)B??Â³ Mar-A??Âƒ$)B??Â­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-A??ƒ$)B??­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A??Âƒ$)B??Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -904,7 +908,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -930,7 +934,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -967,7 +971,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -994,9 +998,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-A??ƒ$)B??¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A??Âƒ$)B??Â¶rkem Cetin.
 
-2002-01-06  Germ-A??ƒ$)B??n Poo-Caama-A??ƒ$)B??±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A??Âƒ$)B??n Poo-Caama-A??Âƒ$)B??Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -1014,7 +1018,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Updated Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -1030,7 +1034,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-A??ƒ$)B??¥l) translation.
+	* no.po: Added Norwegian (bokm-A??Âƒ$)B??Â¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -1069,7 +1073,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-A??ƒ$)B??³ Mar-A??ƒ$)B??­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A??Âƒ$)B??Â³ Mar-A??Âƒ$)B??Â­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
