Applied patch from Baudais@kkpsi.org to make table borders lighter.
2003-03-31  Mikael Hallendal  <micke@codefactory.se>

	* Applied patch from Baudais@kkpsi.org to make table borders
	  lighter.

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-31  Mikael Hallendal  <micke@codefactory.se>
+
+	* Applied patch from Baudais@kkpsi.org to make table borders
+	  lighter.
+	
 2003-03-16  Andras Timar  <timar@gnome.hu>
 
 	* l10n.xml: Added Hungarian translation.
