--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2003-04-01 John Fleck <jfleck@inkstain.net>
 
 	* stylesheets/yelp-customization.xsl
+	More from Shaun McCance, fixes #82760
+
+2003-04-01 John Fleck <jfleck@inkstain.net>
+
+	* stylesheets/yelp-customization.xsl
 	Patch from Shaun McCance fixing #91611
 
 2003-03-31  Mikael Hallendal  <micke@codefactory.se>
