- Applied patch from Shaun fixing #86081
2003-04-03  Mikael Hallendal  <micke@codefactory.se>

        * yelp-customization.xsl:
	*         - Applied patch from Shaun fixing #86081

--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-03  Mikael Hallendal  <micke@codefactory.se>
+       
+        * yelp-customization.xsl: 
+	- Applied patch from Shaun fixing #86081
+
 2003-04-02  Mikael Hallendal  <micke@codefactory.se>
 
 	* images/*: Updated images so that they have transparent
