--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-05 John Fleck <jfleck@inkstain.net>
+
+	* stylesheets/yelp-customization.xsl
+	More from Shaun McCance, fixes #10047
+
 2003-04-01 John Fleck <jfleck@inkstain.net>
 
 	* stylesheets/yelp-customization.xsl
