stylesheets/yelp-customization.xsl More from Shaun McCance, fixes #100415
2003-04-05 John Fleck <jfleck@inkstain.net>

	* stylesheets/yelp-customization.xsl
	More from Shaun McCance, fixes #100415

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
 2003-04-05 John Fleck <jfleck@inkstain.net>
 
 	* stylesheets/yelp-customization.xsl
-	More from Shaun McCance, fixes #10047
+	More from Shaun McCance, fixes #100415
+
+2003-04-05 John Fleck <jfleck@inkstain.net>
+
+	* stylesheets/yelp-customization.xsl
+	More from Shaun McCance, fixes #100477
 
 2003-04-01 John Fleck <jfleck@inkstain.net>
 
