--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Changes in 2.3.0:
+-----------------
+
+* Lots of updates to the stylesheets
+* Removed support for gtkthml1 (no CSS)
+* Removed the 'gman' symlink (#103750)
+* Fixed the command line argument parsing
+* Updated translations
+  (mn, id, kn, fa, th, is, eo, ml, de,          
+   fi, zh_TW, zh_CN, ro, es, it, pt, am,       
+   tr, nl, be, th, he)
+
 Changes in 2.2.0:
 -----------------
 
