--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-07  Mikael Hallendal  <micke@codefactory.se>
+
+        * Release 2.3.0
+
+        * NEWS: Updated for 2.3.0
+	
 2003-04-05 John Fleck <jfleck@inkstain.net>
 
 	* stylesheets/yelp-customization.xsl
