Updated Ukrainian translation

--- a/po/uk.po
+++ b/po/uk.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2003-04-08 15:08+0300\n"
-"PO-Revision-Date: 2003-04-08 04:16--500\n"
+"PO-Revision-Date: 2003-04-08 07:25--500\n"
 "Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Фабрика Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr "Встановити каталог кеша"
+msgstr "Встановити каталог кешу"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -245,7 +245,7 @@ msgstr "/Перейти/_Назад"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr "/Перейти/_Домівка"
+msgstr "/Перейти/_Початкова сторінка"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
@@ -273,7 +273,7 @@ msgstr "Документ \"%s\" не існує"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "Юрій Сирота"
+msgstr "Юрій Сирота <yuriy@beer.com>"
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
@@ -297,11 +297,11 @@ msgstr "Показати наступну сторінку в історії"
 
 #: src/yelp-window.c:814
 msgid "Home"
-msgstr "Домівка"
+msgstr "Початкова сторінка"
 
 #: src/yelp-window.c:815
 msgid "Go to home view"
-msgstr "Показати домівку"
+msgstr "Показати початкову сторінку"
 
 #: src/yelp-window.c:825
 msgid "Index"
