--- a/po/ja.po
+++ b/po/ja.po
@@ -5,9 +5,9 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp Ver2.1.3\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-01-05 02:19+0900\n"
+"Project-Id-Version: yelp HEAD\n"
+"POT-Creation-Date: 2003-04-10 00:26+0900\n"
+"PO-Revision-Date: 2003-04-10 00:25+0900\n"
 "Last-Translator: Takeshi Aihana <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,7 @@ msgstr "Yelp ファクトリ"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "使用するキャッシュ・フォルダを定義します"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -65,7 +65,7 @@ msgstr "Yelp を活性化することが出来ませんでした: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "新規にウィンドウを開くことが出来ませんでした。"
+msgstr "新規にウィンドウを開くことができませんでした。"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
