2003-04-10 fixed mis-translations. T.Aihana <aihana@gnome.gr.jp>

--- a/po/ja.po
+++ b/po/ja.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
-"POT-Creation-Date: 2003-04-10 00:26+0900\n"
-"PO-Revision-Date: 2003-04-10 00:25+0900\n"
+"POT-Creation-Date: 2003-04-10 00:35+0900\n"
+"PO-Revision-Date: 2003-04-10 00:34+0900\n"
 "Last-Translator: Takeshi Aihana <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,7 @@ msgstr "Yelp ファクトリ"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr "使用するキャッシュ・フォルダを定義します"
+msgstr "使用するキャッシュ・フォルダを指定する"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -258,7 +258,7 @@ msgstr "ドキュメント '%s' は存在しません"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "翻訳者のクレジット"
+msgstr "Takeshi AIHANA <aihana@gnome.gr.jp>"
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
