Change string in about box
2003-04-15  Alex Duggan  <aldug@astrolinux.com>

	* src/yelp-window.c: Change string in about box

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-15  Alex Duggan  <aldug@astrolinux.com>
+
+	* src/yelp-window.c: Change string in about box
+
 2003-04-07  Mikael Hallendal  <micke@codefactory.se>
 
         * Release 2.3.0
