updated Macedonian translation

--- a/po/mk.po
+++ b/po/mk.po
@@ -1,3 +1,5 @@
+# translation of mk.po to Macedonian
+# translation of mk.po to
 # translation of yelp.gnome-2-2.mk.po to Macedonian
 # translation of yelp.HEAD.po to Macedonian
 # Yelp translated on Macedonian
@@ -7,9 +9,9 @@
 # Ivan Stojmirov <stojmir@linux.net.mk>, 2002,2003
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.gnome-2-2.mk\n"
+"Project-Id-Version: mk\n"
 "POT-Creation-Date: 2003-04-10 04:23+0200\n"
-"PO-Revision-Date: 2003-04-14 17:10+0200\n"
+"PO-Revision-Date: 2003-04-16 15:05+0200\n"
 "Last-Translator: Ivan Stojmirov <stojmir@linux.net.mk>\n"
 "Language-Team: Macedonian <gnomk-main@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
