Remove non-existant file(s).
2003-04-24  Abel Cheung  <maddog@linux.org.hk>

	* po/POTFILES.skip: Remove non-existant file(s).

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-24  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.skip: Remove non-existant file(s).
+
+2003-04-24  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
+
 2003-04-10  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
