--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,13 +1,13 @@
 # Traditional Chinese translation of yelp.
-# Copyright (C) 2002-2003 Free Software Foundation, Inc.
+# Copyright (C) 2002, 03 Free Software Foundation, Inc.
 # Joe Man <trmetal@yahoo.com.hk>, 2002.
 # Abel Cheung <maddog@linux.org.hk>, 2002-2003.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.2.0\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-01-21 18:24+0800\n"
+"POT-Creation-Date: 2003-04-23 23:01+0800\n"
+"PO-Revision-Date: 2003-04-24 14:29+0800\n"
 "Last-Translator: Joe Man <trmetal@yahoo.com.hk>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,7 @@ msgstr "Yelp 工廠"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "決定將會使用的快取目錄"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -146,7 +146,7 @@ msgstr "章節"
 
 #: src/yelp-view-index.c:480
 msgid "_Search for:"
-msgstr "尋找(_S)："
+msgstr "搜尋(_S)："
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -163,11 +163,11 @@ msgstr "額外文件"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr "手冊頁(Manpage)"
+msgstr "Manual Page"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
 msgid "Info Pages"
-msgstr "資訊文件(Info)"
+msgstr "Info Page"
 
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
 msgid "Documents"
@@ -179,7 +179,7 @@ msgstr "分類"
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
-msgstr "說明文件"
+msgstr "Manual page"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
@@ -266,8 +266,8 @@ msgstr ""
 "Abel Cheung <maddog@linux.org.hk>, 2002-2003"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "GNOME 2.0 的說明文件瀏覽程式"
+msgid "A Help Browser for GNOME"
+msgstr "GNOME 的說明文件瀏覽程式"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -303,7 +303,7 @@ msgstr "在索引中搜尋"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "顯示 GNOME 的說明文件"
+msgstr "顯示 GNOME 說明文件"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
