Added "bn" to ALL_LINGUAS. Added Bangla(Bengali) translation by Mujahidul
2003-04-24  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.
	* bn.po: Added Bangla(Bengali) translation by
	Mujahidul Islam <suzan229@yahoo.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-24  Taneem Ahmed  <taneem@eyetap.org>
+
+	* configure.in: Added "bn" to ALL_LINGUAS.
+
 2003-04-15  Alex Duggan  <aldug@astrolinux.com>
 
 	* src/yelp-window.c: Change string in about box
