--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-24  Taneem Ahmed  <taneem@eyetap.org>
+
+	* bn.po: Added Bangla(Bengali) translation by
+	Mujahidul Islam <suzan229@yahoo.com>
+
 2003-03-30  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated by Vincent van Adrighem.
