--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-29  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2003-04-24  Taneem Ahmed  <taneem@eyetap.org>
 
 	* bn.po: Added Bangla(Bengali) translation by
