--- a/po/cs.po
+++ b/po/cs.po
@@ -5,15 +5,14 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Yelp 2.1.x\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2002-12-14 09:44GMT\n"
-"Last-Translator: Michal Bukovjan <bukm@centrum.cz>\n"
+"Project-Id-Version: Yelp VERSION\n"
+"POT-Creation-Date: 2003-04-29 13:56+0200\n"
+"PO-Revision-Date: 2003-04-29 14:32+0200\n"
+"Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -57,7 +56,7 @@ msgstr "Generátor Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Definovat, který adresář cache používat"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -262,8 +261,8 @@ msgid "translator_credits"
 msgstr "Michal Bukovjan"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Prohlížeč nápovědy pro prostředí GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Prohlížeč nápovědy pro GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
