*** empty log message ***

--- a/po/he.po
+++ b/po/he.po
@@ -7,14 +7,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-03-08 12:35+0200\n"
+"POT-Creation-Date: 2003-04-29 13:56+0200\n"
+"PO-Revision-Date: 2003-04-29 17:19+0300\n"
 "Last-Translator: Gil 'Dolfin' Osher <dolfin@rpg.org.il>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0\n"
+"X-Generator: KBabel 1.0.1\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -59,7 +59,7 @@ msgstr "יצרן Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "הגדר באיזו תיקיית מטמון להשתמש"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -269,8 +269,8 @@ msgstr ""
 "http://linbrew.sourceforge.net"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "דפדפן עזרה ל GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "דפדפן עזרה ל GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -311,3 +311,4 @@ msgstr "קבל עזרה עם GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "עזרה"
+
