--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-30  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2003-04-29  Gil "Dolfin" Osher <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
