--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
+
+        * configure.in: Added "ga" to ALL_LINGUAS.
+
 2003-04-24  Taneem Ahmed  <taneem@eyetap.org>
 
 	* configure.in: Added "bn" to ALL_LINGUAS.
