--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
+
+        * ga.po: Added Irish Translation
+
 2003-04-30  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
