Updated Irish Translation
2003-05-01 Paul Duffy <dubhthach@frink.nuigalway.ie>
Updated Irish Translation

--- a/po/ga.po
+++ b/po/ga.po
@@ -138,7 +138,7 @@ msgstr ""
 
 #: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
-msgstr ""
+msgstr "ag Lódáil..."
 
 #: src/yelp-view-content.c:543 src/yelp-view-index.c:517
 msgid "Section"
@@ -159,19 +159,19 @@ msgstr "GNOME - Deasc"
 
 #: src/yelp-view-toc.c:167
 msgid "Additional documents"
-msgstr ""
+msgstr "Doiciméadí eile"
 
 #: src/yelp-view-toc.c:168 src/yelp-view-toc.c:493
 msgid "Manual Pages"
-msgstr ""
+msgstr "Leathanach as an Lámhleabhar"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
 msgid "Info Pages"
-msgstr ""
+msgstr "Leathanach Eolas"
 
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
 msgid "Documents"
-msgstr ""
+msgstr "Doiciméadí"
 
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
@@ -179,7 +179,7 @@ msgstr ""
 
 #: src/yelp-view-toc.c:448
 msgid "Manual pages"
-msgstr ""
+msgstr "leathanach as an Lámhleabhar "
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
@@ -247,7 +247,7 @@ msgstr "/Cabhair/_Faoi"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
-msgstr ""
+msgstr "Líonléitheoir Cabhair"
 
 #: src/yelp-window.c:351
 #, c-format
@@ -262,7 +262,7 @@ msgstr ""
 
 #: src/yelp-window.c:679
 msgid "A Help Browser for GNOME"
-msgstr ""
+msgstr "Líonléitheoir Cabhair le haighaidh GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -278,7 +278,7 @@ msgstr "chun Tosaigh"
 
 #: src/yelp-window.c:801
 msgid "Show next page in history"
-msgstr ""
+msgstr "Téigh go dtí an chead leathanach eile sa stair"
 
 #: src/yelp-window.c:814
 msgid "Home"
@@ -286,19 +286,19 @@ msgstr "Abhaile"
 
 #: src/yelp-window.c:815
 msgid "Go to home view"
-msgstr ""
+msgstr "Téigh go dtí radharc baile"
 
 #: src/yelp-window.c:825
 msgid "Index"
-msgstr ""
+msgstr "Innéacs"
 
 #: src/yelp-window.c:826
 msgid "Search in the index"
-msgstr ""
+msgstr "Cuardaigh sa Innéacs"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr ""
+msgstr "Faigh cabhair le haighaidh GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
