--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
+        * ga.po: Updated Irish Translation.
+	
+2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
+
         * ga.po: Added Irish Translation
 
 2003-04-30  Laurent Dhima  <laurenti@alblinux.net>
