Updated French translation.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,15 +1,15 @@
 # French translation of Yelp.
-# Copyright (C) 2002 Free Software Foundation, Inc.
+# Copyright (C) 2002-2003 Free Software Foundation, Inc.
 # maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002.
-# Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002.
+# Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002-2003.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2002.
 # Sun G11n <gnome_int_l10n@ireland.sun.com>, 2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.1.2\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2002-12-15 18:26+0100\n"
+"Project-Id-Version: yelp 2.3.0\n"
+"POT-Creation-Date: 2003-05-02 11:54+0200\n"
+"PO-Revision-Date: 2003-05-02 11:39+0200\n"
 "Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,7 +58,7 @@ msgstr "Fabrique Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Définit le répertoire de cache à utiliser"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -100,7 +100,7 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:364
 msgid "System Calls"
-msgstr "Appels systèmes"
+msgstr "Appels système"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
@@ -120,7 +120,7 @@ msgstr "Développement"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Matériel"
+msgstr "Périphériques matériels"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
@@ -132,7 +132,7 @@ msgstr "Jeux"
 
 #: src/yelp-man.c:454
 msgid "Overviews"
-msgstr "Résumés"
+msgstr "Divers"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
@@ -189,7 +189,7 @@ msgstr "GNOME est"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr "Logiciel libre"
+msgstr "Logiciel Libre"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
@@ -209,7 +209,7 @@ msgstr "/Fichier/_Fermer la fenêtre"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr "/Édition"
+msgstr "/_Édition"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
@@ -270,8 +270,8 @@ msgstr ""
 "Sun G11n <gnome_int_l10n@ireland.sun.com>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Navigateur d'aide de GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Un navigateur d'aide pour GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -307,7 +307,7 @@ msgstr "Recherche dans l'index"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Aide sur GNOME"
+msgstr "Affiche l'aide sur GNOME"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
