--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,11 @@
+2003-05-02  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
         * ga.po: Updated Irish Translation.
-	
+
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
         * ga.po: Added Irish Translation
