Added "sr" and "sr@Latn" to ALL_LINGUAS.
2003-05-05  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-06  Danilo Šegan  <dsegan@gmx.net>
+
+	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
+
 2003-05-01  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
         * configure.in: Added "ga" to ALL_LINGUAS.
