--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-06  Danilo ©egan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Added Serbian translation by 
+	http://Prevod.org/.
+
 2003-05-05  Paul Duffy <dubhthach@frink.nuigalway.ie>
 
         * ga.po: Updated Irish translation.
