--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-09  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2003-05-08  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation by
