Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -1,12 +1,12 @@
 # Yelp Catalan translation. 
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Jordi Mallach <jordi@sindominio.net>, 2002.
+# Copyright (C) 2002, 2003 Free Software Foundation, Inc.
+# Jordi Mallach <jordi@sindominio.net>, 2002, 2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.1.3\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2002-12-20 23:32+0100\n"
+"Project-Id-Version: yelp 2.3.0\n"
+"POT-Creation-Date: 2003-05-09 19:18+0200\n"
+"PO-Revision-Date: 2003-05-09 19:21+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Fàbrica de Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Defineix quin directori de memòria cau s'utilitza"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -260,8 +260,8 @@ msgid "translator_credits"
 msgstr "Jordi Mallach <jordi@sindominio.net>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Navegador d'ajuda per a GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Navegador d'ajuda per al GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
