--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-09  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2003-05-09  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
