Updated Portuguese translation.
2003-05-13  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.

--- a/po/pt.po
+++ b/po/pt.po
@@ -1,12 +1,13 @@
 # yelp's Portuguese Translation
-# Copyright (C) 2001 Free Software Foundation, Inc.
+# Copyright (C) 2001 yelp
+# Distributed under the same licence as yelp package
 # Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2002, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.2\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-02-02 14:50+0000\n"
+"Project-Id-Version: 2.4\n"
+"POT-Creation-Date: 2003-05-13 22:01+0000\n"
+"PO-Revision-Date: 2003-05-13 22:05+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +56,7 @@ msgstr "Fábrica Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Defina que directório de cache utilizar"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -260,8 +261,8 @@ msgid "translator_credits"
 msgstr "Duarte Loreto <happyguy_pt@hotmail.com>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Navegador de Ajuda para o GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Um Navegador de Ajuda para o GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
