Updated Danish translation.
2003-05-19  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

--- a/po/da.po
+++ b/po/da.po
@@ -1,12 +1,12 @@
 # Danish translation of Yelp.
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Ole Laursen <olau@hardworking.dk>, 2002.
+# Copyright (C) 2002, 03 Free Software Foundation, Inc.
+# Ole Laursen <olau@hardworking.dk>, 2002, 03.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2002-12-14 14:43+0100\n"
+"POT-Creation-Date: 2003-05-19 21:19+0200\n"
+"PO-Revision-Date: 2003-05-19 21:19+0200\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -55,7 +55,7 @@ msgstr "Yelp-fabrik"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Definér hvilken mappe der skal benyttes til mellemlager"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -260,8 +260,8 @@ msgid "translator_credits"
 msgstr "Ole Laursen <olau@hardworking.dk>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Hjælpelæser til Gnome 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "En hjælpelæser til Gnome"
 
 #: src/yelp-window.c:788
 msgid "Back"
