Dutch translation updated by Tino Meinen.
2003-05-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* nl.po: Dutch translation updated by Tino Meinen.

--- a/po/nl.po
+++ b/po/nl.po
@@ -1,13 +1,13 @@
 # Dutch translation of Yelp.
 # Copyright © 2002 Free Software Foundation, Inc.
-# Tino Meinen <a.t.meinen@chello.nl>, 2002.
+# Tino Meinen <a.t.meinen@chello.nl>, 2002-2003.
 # Ronald Hummelink <ronald@hummelink.xs4all.nl>, 2002
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-02-09 16:29+0100\n"
+"POT-Creation-Date: 2003-05-24 20:49+0200\n"
+"PO-Revision-Date: 2003-05-25 02:10+0200\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,7 @@ msgstr "Yelp-Fabriek"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Opgeven welke cash-map moet worden gebruikt"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -207,7 +207,7 @@ msgstr "/Bestand/Venster _sluiten"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr "/B_ewerken"
+msgstr "/Be_werken"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
@@ -247,7 +247,7 @@ msgstr "/Hulp/_Info"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
-msgstr "Hulp Browser"
+msgstr "Hulp-browser"
 
 #: src/yelp-window.c:351
 #, c-format
@@ -259,12 +259,13 @@ msgstr "Het document '%s' bestaat niet"
 #: src/yelp-window.c:675
 msgid "translator_credits"
 msgstr ""
-"Tino Meinen a.t.meinen@chello.nl\n"
-"Ronald Hummelink ronald@hummelink.xs4all.nl"
+"Tino Meinen <a.t.meinen@chello.nl>\n"
+"Ronald Hummelink <ronald@hummelink.xs4all.nl>"
 
+# Een Hulp voor GNOME, een Hulp-programma voor GNOME
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Hulp Browser voor GNOME 2"
+msgid "A Help Browser for GNOME"
+msgstr "Een Hulp-browser voor GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
