--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2003-05-26  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
 	* cy.po: Added Welsh translation from 
